post_cache/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: post-cache
    app.kubernetes.io/name: post-cache
  name: post-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: post-cache
      app.kubernetes.io/name: post-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: post-cache
        app.kubernetes.io/name: post-cache
    spec:
      containers:
        - image: ghcr.io/xjdao2025/post_cache:latest
          imagePullPolicy: IfNotPresent
          name: post-cache
          command: ["post_cache"]
          args: [
            "--db-url", "$(DB_URL)",
            "--pds", "$(PDS)",
            "--bsky", "$(BSKY)",
            "--password", "$(PASSWORD)",
            "--visitor", "$(VISITOR)",
            "--visitor-password", "$(VISITOR_PASSWORD)"
          ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /etc/localtime
              name: node-localtime
        - image: m.daocloud.io/docker.io/postgres:16-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources: 
            limits:
              cpu: 512m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
            - mountPath: /etc/localtime
              name: node-localtime
      volumes:
      - hostPath:
          path: /etc/localtime
        name: node-localtime
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 1Gi
