post_cache/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-cache
  labels:
    app.kubernetes.io/instance: post-cache
    app.kubernetes.io/name: post-cache
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: post-cache
    app.kubernetes.io/name: post-cache
