post_cache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-cache-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    spec.ingressClassName: "nginx"
spec:
  rules:
    - host: post.xjdao.net
      http:
        paths:
          - backend:
              service:
                name: post-cache
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - post.xjdao.net
      secretName: xjdao.net-tls-secret
